# scAnnotate

./: .gitignore  README.md  Snakefile  pyproject.toml
requirements/: requirements.txt
scripts/: count_matrix.py  database_hg38.py  db_hg38.py  dl_hg38.py  download_hg38.py  plt_quality_control.py  quality_control.py
src/pyparse_bio_toolkit/: cm.py  gff.py
src/scAnnotate/: cm.py  gff.py  io.py  qc.py
tests/: test_gff.py
