[build-system]
requires = ["setuptools>=80.9.0", "wheel==0.45.1", "setuptools_scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "scAnnotate"
description = "Creates an annotated AnnData (h5ad) count matrix from a barcoded BAM file "
authors = [{ name = "Lukas Ramlow" }]
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/logluke/scAnnotate"
repository = "https://github.com/logluke/scAnnotate.git"
documentation = "https://github.com/logluke/scAnnotate"
bugtracker = "https://github.com/logluke/scAnnotate/issues"

[project.optional-dependencies]
test=[]

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/requirements_test.txt"]}

[tool.setuptools]
packages.find = { where = ["src"] }

[tool.setuptools_scm]
version_file = "src/scAnnotate/_version.py"

[tool.setuptools.dynamic]
version = { attr = "scAnnotate._version.version" }
dependencies = {file = ["requirements/requirements.txt"]}
